--- a/control
+++ b/control
@@ -6,4 +6,5 @@ Description: An awesome status bar tweak!
 Maintainer: lebao3105
 Author: lebao3105
 Section: Tweaks
-Depends: PreferenceLoader, firmware (>= 15.0)
+Depends: 
+SileoDepiction: https://raw.githubusercontent.com/lebao3105/repo/main/descriptions/me.lebao3105.sbaroverride.json
