--- a/sbartweakprefs/Resources/Root.plist
+++ b/sbartweakprefs/Resources/Root.plist
@@ -10,7 +10,7 @@
 			<key>label</key>
 			<string>General</string>
 			<key>footerText</key>
-			<string>Wait for about a minute/battery drain or charge to see the changes.</string>
+			<string>Wait for about a minute/battery drain or charge to see the changes. For the carrier text, a respring is advised to see the change everywhere.</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -49,8 +49,6 @@
 		<dict>
 			<key>cell</key>
 			<string>PSEditTextCell</string>
-			<!-- <key>default</key>
-			<string>test</string> -->
 			<key>defaults</key>
 			<string>me.lebao3105.sbartweakprefs</string>
 			<key>key</key>
@@ -97,8 +95,6 @@
 		<dict>
 			<key>cell</key>
 			<string>PSEditTextCell</string>
-			<!-- <key>default</key>
-			<string>test</string> -->
 			<key>defaults</key>
 			<string>me.lebao3105.sbartweakprefs</string>
 			<key>key</key>
@@ -114,7 +110,7 @@
 			<key>label</key>
 			<string>Battery percent</string>
 			<key>footerText</key>
-			<string>Mode 0: off. Mode 1: show used battery percent text. Mode2: show used battery percent (icon). Mode 3: show used battery percent (both label and icon).
+			<string>Mode 0: off. Mode 1: show used battery percent text. Mode2: show used battery percent (icon). Mode 3: show used battery percent (both label and icon).
 			</string>
 		</dict>
 		<dict>
@@ -149,7 +145,7 @@
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>footerText</key>
-			<string>Version 1.1.0. Made by @lebao3105.</string>
+			<string>Version 1.1.0. Made by @lebao3105. Thanks for using my tweak!</string>
 			<key>footerAlignment</key>
 			<string>1</string>
 		</dict>
