Redesign settings page

--- a/sbartweakprefs/Resources/Root.plist
+++ b/sbartweakprefs/Resources/Root.plist
@@ -9,8 +9,6 @@
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>General</string>
-			<key>footerText</key>
-			<string>A respring is required.</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -28,131 +26,68 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>action</key>
+			<string>reSpring</string>
+			<key>label</key>
+			<string>Respring</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSGroupCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>detail</key>
+			<string>XXXCarrierListController</string>
 			<key>label</key>
 			<string>Carrier text</string>
 		</dict>
 		<dict>
 			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>me.lebao3105.sbartweakprefs</string>
-			<key>key</key>
-			<string>enabledCarrier</string>
+			<string>PSLinkCell</string>
+			<key>detail</key>
+			<string>XXXTDateListController</string>
 			<key>label</key>
-			<string>Enable?</string>
-			<key>PostNotification</key>
-			<string>me.lebao3105.sbartweakprefsUpdated</string>
+			<string>Time/date text</string>
 		</dict>
 		<dict>
 			<key>cell</key>
-			<string>PSEditTextCell</string>
-			<key>defaults</key>
-			<string>me.lebao3105.sbartweakprefs</string>
-			<key>key</key>
-			<string>customCarriertext</string>
+			<string>PSLinkCell</string>
+			<key>detail</key>
+			<string>XXXBatteryListController</string>
 			<key>label</key>
-			<string>Custom carrier text:</string>
-			<key>PostNotification</key>
-			<string>me.lebao3105.sbartweakprefsUpdated</string>
+			<string>Battery</string>
 		</dict>
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
-			<string>Clock</string>
+			<string>About</string>
 			<key>footerText</key>
-			<string>Search online for clock format - no seconds support.</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>me.lebao3105.sbartweakprefs</string>
-			<key>key</key>
-			<string>enabledClock</string>
-			<key>label</key>
-			<string>Enable?</string>
-			<key>PostNotification</key>
-			<string>me.lebao3105.sbartweakprefsUpdated</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>me.lebao3105.sbartweakprefs</string>
-			<key>key</key>
-			<string>enabledClockFormat</string>
-			<key>label</key>
-			<string>Custom clock format</string>
-			<key>PostNotification</key>
-			<string>me.lebao3105.sbartweakprefsUpdated</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSEditTextCell</string>
-			<key>defaults</key>
-			<string>me.lebao3105.sbartweakprefs</string>
-			<key>key</key>
-			<string>customtext</string>
-			<key>label</key>
-			<string>Custom clock format:</string>
-			<key>PostNotification</key>
-			<string>me.lebao3105.sbartweakprefsUpdated</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>label</key>
-			<string>Battery percent</string>
-			<key>footerText</key>
-			<string>Mode 0: off. Mode 1: show used battery percent text. Mode 2: show used battery percent (icon). Mode 3: show used battery percent (both label and icon).
-			</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSegmentCell</string>
-			<key>default</key>
-			<integer>0</integer>
-			<key>label</key>
-			<string>Modes</string>
-			<key>validTitles</key>
-			<array>
-				<string>Mode 0</string>
-				<string>Mode 1</string>
-				<string>Mode 2</string>
-				<string>Mode 3</string>
-			</array>
-			<key>validValues</key>
-			<array>
-				<integer>0</integer>
-				<integer>1</integer>
-				<integer>2</integer>
-				<integer>3</integer>
-			</array>
-			<key>key</key>
-			<string>batteryOptions</string>
-			<key>defaults</key>
-			<string>me.lebao3105.sbartweakprefs</string>
-			<key>PostNotification</key>
-			<string>me.lebao3105.sbartweakprefsUpdated</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>Version 1.1.0. Made by @lebao3105. Thanks for using my tweak!</string>
+			<string>Made by @lebao3105. Thanks for using my tweak!</string>
 			<key>footerAlignment</key>
 			<string>1</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSTitleValueCell</string>
+			<key>label</key>
+			<string>Version</string>
+			<key>get</key>
+			<string>getVersion:</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSTitleValueCell</string>
+			<key>label</key>
+			<string>Build</string>
+			<key>get</key>
+			<string>getBuild:</string>
+		</dict>
 	</array>
 	<key>title</key>
-	<string>SBarTweakPrefs</string>
+	<string>SBarOverride</string>
 </dict>
 </plist>
