--- a/sbartweakprefs/Resources/ClockSettings.plist
+++ b/sbartweakprefs/Resources/ClockSettings.plist
@@ -50,6 +50,40 @@
 			<key>PostNotification</key>
 			<string>me.lebao3105.sbartweakprefsUpdated</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Text color</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>label</key>
+			<string>Enable</string>
+			<key>defaults</key>
+			<string>me.lebao3105.sbartweakprefs</string>
+			<key>key</key>
+			<string>enableClockColor</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBColorPickerTableCell</string>
+			<key>label</key>
+			<string>Text color</string>
+			<key>key</key>
+			<string>clockTextColor</string>
+			<key>defaults</key>
+			<string>me.lebao3105.sbartweakprefs</string>
+			<key>showsAlphaSlider</key>
+			<false/>
+			<key>PostNotification</key>
+			<string>me.lebao3105.sbartweakprefsUpdated</string>
+		</dict>
 	</array>
 	<key>title</key>
 	<string>Clock</string>
